# rpo

./: DB_Dump.sql  input.txt  main.go  outcode.txt  output.txt
backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/front/src/: App.js  index.js
backend/front/src/components/: Home.jsx  Login.jsx  NavigationBar.jsx
backend/front/src/services/: BackendService.jsx
backend/front/src/utils/: Rdx.jsx  Utils.jsx
backend/src/main/java/moneyGrabber/backend/: BackendApplication.java
backend/src/main/java/moneyGrabber/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  SecurityConfiguration.java
backend/src/main/java/moneyGrabber/backend/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  SampleController.java  UserController.java
backend/src/main/java/moneyGrabber/backend/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/moneyGrabber/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  UserRepository.java
backend/src/main/java/moneyGrabber/backend/tools/: Utils.java
backend/src/main/java/ru/iu3/chel/backend/: BackendApplication.java
backend/src/test/java/moneyGrabber/backend/: BackendApplicationTests.java
backend/src/test/java/ru/iu3/chel/backend/: BackendApplicationTests.java
chel/: settings.gradle
chel/app/: build.gradle
chel/app/src/androidTest/java/ru/iu3/chel/: ExampleInstrumentedTest.java
chel/app/src/main/: AndroidManifest.xml
chel/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
chel/app/src/main/java/ru/iu3/chel/: MainActivity.java  PinpadActivity.java
chel/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
chel/app/src/main/res/values/: strings.xml  themes.xml
chel/app/src/main/res/values-night/: themes.xml
chel/gradle/wrapper/: gradle-wrapper.properties
decoder/: decoder.go
encoder/: encoder.go
fclient/app/: build.gradle
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/gradle/wrapper/: gradle-wrapper.properties
moneyGrabber/: settings.gradle
moneyGrabber/app/: build.gradle
moneyGrabber/app/src/main/: AndroidManifest.xml
moneyGrabber/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
moneyGrabber/app/src/main/res/layout/: activity_pinpad.xml
moneyGrabber/app/src/main/res/values/: strings.xml  styles.xml  themes.xml
moneyGrabber/app/src/main/res/values-night/: themes.xml
moneyGrabber/gradle/wrapper/: gradle-wrapper.properties
receiver/: receiver.go
source/: source.go
(+6 files in other folders)
